# VvsE

./: CMakeLists.txt
src/: bfs.cu  cc.cu  exp
src/shell/: s-realdata.sh  s-rmatdata.sh  s-roaddata.sh  s1.sh
src/shell/result/: amazon.bin.txt  dblp.bin.txt  wiki.bin.txt
